# drift

./: .gitignore  README.md  pyproject.toml
drift/: __init__.py  cli.py  config.py  differ.py  server.py  snapshot.py  store.py
drift/plugins/: __init__.py  base.py  cron.py  packages.py  ports.py  services.py  users.py
scripts/: install.sh  uninstall.sh
tests/: conftest.py  test_cli.py  test_config.py  test_differ.py  test_plugins.py  test_server.py  test_snapshot.py  test_store.py
